--- a/index.html
+++ b/index.html
@@ -152,20 +152,6 @@ a:hover {
     <img id="lightbox-img" src="" alt="Expanded view">
   </div>
   
-  <section id="about" data-aos="fade-up">
-  <h2>About Me</h2>
-  <details>
-    <summary style="cursor: pointer; font-size: 1.2rem; color: #66ccff; margin-bottom: 1rem;">Click to Expand</summary>
-    <p style="text-align: center; max-width: 720px; margin: 1rem auto; font-size: 1.1rem; line-height: 1.8; color: #ccc;">
-      I enjoy hardware modding, reverse engineering, iOS tweak development, and all kinds of custom projects.
-With a passion for understanding how things work behind the scenes, I combine hands-on work with modern principles.
-My goal is to explore technology in a way I enjoy — creating, learning, and improving every step of the way.
-Whether it’s developing new features for my phone, understanding technology so I can fix rather than replace, adding mod chips for freedom on consoles, or working on DIY projects, I’m driven by need for technical independence.
-    </p>
-  </details>
-</section>
-
-
 
   <section data-aos="fade-up">
     <h2>Development Progress</h2>
@@ -288,7 +274,7 @@ Whether it’s developing new features for my phone, understanding technology so
     <div class="project">
       <div class="badge">PS1 Modding</div>
       <h3>PS1 Modchip Recovery</h3>
-      <p>Found a PlayStation 1 at a flea market with a half-installed modchip. Completed the wiring using <a href="https://quade.co" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">William Quade</a>
+      <p>Found da PlayStation 1 at a flea market with a half-installed modchip. Completed the wiring using <a href="https://quade.co" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">William Quade</a>
  guide's via trial and error.</p>
       <ul style="list-style: disc; margin-left: 2rem; color: #aaa; font-size: 0.95rem;">
   <li>Tools Used: Rockman Tools RM-75 Workstation Solder/Hot-Air, <a href="https://quade.co" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">William Quade</a>
@@ -400,7 +386,20 @@ With a 50W resistor, only about 65% of its rated capacity is used, this is a saf
       </div>
     </div>
   </section>
- 
+  
+  <section id="about" data-aos="fade-up">
+  <h2>About Me</h2>
+  <details>
+    <summary style="cursor: pointer; font-size: 1.2rem; color: #66ccff; margin-bottom: 1rem;">Click to Expand</summary>
+    <p style="text-align: center; max-width: 720px; margin: 1rem auto; font-size: 1.1rem; line-height: 1.8; color: #ccc;">
+      I enjoy hardware modding, reverse engineering, iOS tweak development, and all kinds of custom projects.
+With a passion for understanding how things work behind the scenes, I combine hands-on work with modern principles.
+My goal is to explore technology in a way I enjoy — creating, learning, and improving every step of the way.
+Whether it’s developing new features for my phone, understanding technology so I can fix rather than replace, adding mod chips for freedom on consoles, or working on DIY projects, I’m driven by need for technical independence.
+    </p>
+  </details>
+</section>
+  
   <footer>
   <p>Built from broken rules</p>
   <p style="font-size: 0.7rem; color: #555;">Powered by GitHub</p>
